# hse_mlops_hw

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  commands.py  docker-compose.dev.yaml  docker-compose.metrics.yaml  docker-compose.yaml  pyproject.toml
.dvc/: config
.github/workflows/: auth_api.yml  hse_mlops.yml
Dockerfiles/mlflow/: Dockerfile
Dockerfiles/ops_app/: Dockerfile
Dockerfiles/tensorflow/: Dockerfile
configs/: config.yaml
configs/artifacts/: base_artifacts.yaml  docker_artifacts.yaml
configs/data/: base_data.yaml
configs/inference/: base_inference.yaml
configs/model/: base_model.yaml
configs/train/: base_train.yaml  nvidia-train.yaml
data/: .gitignore  example-experiment.dvc  logs.dvc  test.dvc  train.dvc
hse_mlops_hw/: infer.py  train.py
hse_mlops_hw/callbacks/: predictors.py
hse_mlops_hw/cmd/: commands.py
hse_mlops_hw/core/: utils.py
hse_mlops_hw/data/: data.py
hse_mlops_hw/models/: model.py
hse_mlops_hw/services/: getter.py  utils.py
src/: ci_test.py
