[tool.poetry]
name = "hse-mlops-hw"
version = "0.1.0"
description = ""
authors = ["DK <kachkindmitry@gmail.com>"]
readme = "README.md"
packages = [{ include = "hse_mlops_hw" }]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.1.0+cu121"
torchtext = "0.16.0"
torchvision = "0.16.0+cu121"
hydra-core = "^1.3.2"
lightning = "~2.1.2"
transformers = "^4.36.2"
pillow = "^10.1.0"
mlflow = "^2.9.2"
psycopg2-binary = "^2.9.9"
rich = "^13.7.0"
psutil = "^5.9.7"
timm = "^0.9.12"
tensorboard = "^2.15.1"
dvc = "^3.38.1"
dvc-gdrive = "^3.0.1"
fire = "^0.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pre-commit = "^3.5.0"
pylint = "^3.0.2"
isort = "^5.12.0"
mypy = "^1.7.1"
pylint-report = "^2.4.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
train = "hse_mlops_hw.train:train"
infer = "hse_mlops_hw.infer:infer"

[tool.black]
line_length = 88
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | venv
  | build
  | dist
)/
'''


[tool.isort]
profile = "black"
multi_line_output = 3


[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = "*.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pylint.main]
fail-under = 10
ignore = ["data"]
ignored-modules = ["test"]
py-version = "3.10"
suggestion-mode = true

[tool.pylint.basic]
bad-names = ["foo", "bar", "baz", "toto", "tutu", "tata"]
class-attribute-naming-style = "any"
class-const-naming-style = "UPPER_CASE"
class-naming-style = "PascalCase"
const-naming-style = "UPPER_CASE"
function-naming-style = "snake_case"
property-classes = ["abc.abstractproperty"]


[tool.pylint.format]
ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$"
indent-after-paren = 4
indent-string = "    "
max-line-length = 88
max-module-lines = 1000


[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "import-error",
    "arguments-differ",
    "R0801",
    "logging-fstring-interpolation",
    "invalid-all-format"
]


good-names = []



[tool.pylint.similarities]
ignore-imports = true
ignore-docstrings = true
ignore-comments = true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
